Update package.json for correct link

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jeopardy",
   "version": "0.2.0",
   "private": true,
-  "homepage": "https://zcam123.github.io/BHJeopardy",
+  "homepage": "https://zcam123.github.io/fixJeop",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
